gcc/testsuite/rust/rustc/ui/issues/issue-17431-1.rs
struct Foo { foo: Option<Option<Foo>> }
// { dg-error ".E0072." "" { target *-*-* } .-1 }

impl Foo { fn bar(&self) {} }

fn main() {}

